--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English literature'
+- GITenberg
 tableOfContents: Amboyna -- The state of Innocence -- Aureng-Zebe -- All for Love.
 title: The Works of John Dryden, now first collected in eighteen volumes. Volume 05
 url: http://www.gutenberg.org/ebooks/16208
